# NodeProcessV2

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build.yaml
src/: FileDialog.cpp  FileDialog.h  Image.cpp  Image.h  Log.h  Logger.h  Media.h  MenuBar.cpp  MenuBar.h  MenuItem.h  MenuItem_Audio.cpp  MenuItem_Audio.h  MenuItem_File.cpp  MenuItem_File.h  MenuItem_ImageVideo.cpp  MenuItem_ImageVideo.h  MenuItem_Other.cpp  MenuItem_Other.h  NPconfig.h  NodeContent.cpp  NodeContent.h  NodeGui.cpp  NodeGui.h  NodeManager.cpp  NodeManager.h  Pin.cpp  Pin.h  PinManager.cpp  PinManager.h  main.cpp
src/node/: BinarizationNode.cpp  BinarizationNode.h  BreakRGBNode.cpp  BreakRGBNode.h  ColorBlendNode.cpp  ColorBlendNode.h  Constant.cpp  Constant.h  EdgeDetectionNode.cpp  EdgeDetectionNode.h  GraphicsAnalyzeNode.h  GraphicsNode.h  GraphicsProcessingNode.h  GrayScallingNode.cpp  GrayScallingNode.h  HistogramNode.cpp  HistogramNode.h  ImageNode.cpp  ImageNode.h  MediaNode.h  Node.cpp  Node.h  NodeStyle.h  PreviewNode.cpp  PreviewNode.h  ProcessingNode.h  VideoNode.cpp  VideoNode.h
src/profiler/: TimeProfiler.h
uml/: uml.pu  uml_impl.pu
